# deep-translator

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .scrutinizer.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  pyvenv.cfg  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup.py.bak  tox.ini
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  pre-commit.yml  pre-release.yml  production-tests.yml  release.yml  tagged-release.yml  test-release.yml  test.yml
deep_translator/: __init__.py  __main__.py  async_requests.py  baidu.py  base.py  chatgpt.py  cli.py  configs.py  constants.py  deep_translator.py  deepl.py  detection.py  engine.py  engines.py  exceptions.py  glosbe.py  google.py  google_trans.py  libre.py  linguee.py  main.py  microsoft.py  mint.py  models.py  mymemory.py  papago.py  parent.py  pons.py  pons_api.py  qcri.py  tencent.py  utils.py  validate.py  voice_translate_google.py  yandex.py
deep_translator/tests/: test_cli.py  test_deep_translator.py  test_deepl.py  test_google_trans.py  test_linguee.py  test_mymemory.py  test_pons.py
docs/: LICENSE  Makefile  README.rst  authors.rst  conf.py  contributing.rst  deep_translator.rst  deep_translator.tests.rst  history.rst  index.rst  installation.rst  make.bat  modules.rst  other_lang.rst  requirements_docs.txt  usage.rst
docs/ja/: CONTRIBUTING.rst  README.rst  authors.rst  contributing.rst  history.rst  index.rst  installation.rst  usage.rst
examples/: glosbe.py  libre.py  linguee.py  mint.py  mymemory.py  pons.py  test.txt  trans.py
ja/: CONTRIBUTING.rst  README.rst  index.rst  installation.rst  modules.rst
tests/: test_baidu.py  test_cli.py  test_data.py  test_deep_translator.py  test_deepl.py  test_glosbe.py  test_google.py  test_google_trans.py  test_libre.py  test_linguee.py  test_microsoft_trans.py  test_mint.py  test_mymemory.py  test_pons.py  test_tencent.py
