[tool.poetry]
name = "deep-translator"
version = "1.6.1"
description = "A flexible free and unlimited python tool to translate between different languages in a simple way using multiple translators"
license = "MIT"
authors = ["Nidhal Baccouri <nidhalbacc@gmail.com>"]
maintainers = ["Nidhal Baccouri <nidhalbacc@gmail.com>", "Chris Trenthem <trenthemc@gmail.com>"]
readme = "docs/README.rst"
homepage = "https://github.com/nidhaloff/deep_translator"
repository = "https://github.com/nidhaloff/deep_translator"
documentation = "https://deep-translator.readthedocs.io/en/latest/"
keywords = ["deep_translator", "deepL", "DeepL", "translator", "translation", "automation", "web scraping", "google translator", "google translation", "google trans", "PONS", "YANDEX", "MyMemory translator", "Linguee", "QCRI", "Language", "Language detection", "detect language", "free translation", "unlimited translation", "translate for free"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Communications",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent"]
packages = [{include="deep_translator"}]

include = [  ]

[tool.poetry.scripts]
deep-translator = 'deep_translator.main:cli'
dt = 'deep_translator.main:cli'

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.1"
requests = "^2.23.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
wheel = "flake8"
#tox = "^3.24.0"
coverage = "^5.5"
Sphinx = "^4.1.1"
twine = "^3.4.2"
pytest = "^6.2.4"
pytest-runner = "^5.3.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
