[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.poetry]
name = "deep-translator"
version = "1.11.4"
description = "A flexible free and unlimited python tool to translate between different languages in a simple way using multiple translators"
license = "MIT"
authors = ["Nidhal Baccouri <nidhalbacc@gmail.com>"]
maintainers = ["Nidhal Baccouri <nidhalbacc@gmail.com>", "Chris Trenthem <trenthemc@gmail.com>"]
readme = "docs/README.rst"
homepage = "https://github.com/nidhaloff/deep_translator"
repository = "https://github.com/nidhaloff/deep_translator"
documentation = "https://deep-translator.readthedocs.io/en/latest/"
keywords = ["deep_translator", "deepL", "DeeplTranslator", "translator", "translation", "automation", "web scraping", "google translator", "google translation", "google trans", "PONS", "YANDEX", "MyMemory translator", "Linguee", "QcriTranslator", "Language", "Language detection", "detect language", "free translation", "unlimited translation", "translate for free"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Communications",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent"]
packages = [{include="deep_translator"}]
[tool.poetry.scripts]
deep-translator = 'deep_translator.__main__:main'
dt = 'deep_translator.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.1"
requests = "^2.23.0"
docx2txt = {version = "^0.8", optional = true}
pypdf = {version = "^3.3.0", optional = true}
openai = {version = "^0.27.6", python = "^3.7.1", optional = true}

[tool.poetry.extras]
docx = ["docx2txt"]
pdf = ["pypdf"]
ai = ["openai"]

[tool.poetry.dev-dependencies]
wheel = "^0.38.4"
coverage = "^5.5"
Sphinx = "^4.1.1"
twine = "^3.4.2"
pytest = "^6.2.4"
pytest-runner = "^5.3.1"
toml = "^0.10.2"
black = "^22.1.0"
isort = "^5.10.1"
python-semantic-release = "^7.26.0"
pre-commit = "^2.21.0"

[tool.pycln]
all = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]
