#main config
[metadata]
name = Deep Translator
version = 1.4.4
url = https://github.com/nidhaloff/deep_translator
author = Nidhal Baccouri
author_email = nidhalbacc@gmail.com
maintainer = Nidhal Baccouri
maintainer_email = nidhalbacc@gmail.com
classifiers =         
    Development Status :: 5 - Production/Stable,
    Intended Audience :: Developers,
    Intended Audience :: Education,
    Intended Audience :: Information Technology,
    License :: OSI Approved :: MIT License,
    Topic :: Education,
    Topic :: Software Development,
    Topic :: Communications,
    Topic :: Text Processing,
    Topic :: Text Processing :: Linguistic,
    Natural Language :: English,
    Operating System :: OS Independent,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.5,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8
license = MIT
license_files = file:LICENSE
description = A flexible python tool to translate between different languages in a simple way.
long_description = file:README.rst
long_description_content_type = text/rst
keywords = deep_translator, deepL, DeepL, translator, translation, automation, 
    web scraping, google translator, google translation, google trans, PONS, 
    YANDEX, MyMemory translator, Linguee, QCRI, Language, Language detection, 
    detect language, free translation, unlimited translation, translate for free

# [options]
# zip_safe = 0
# setup_requires = pytest-runner
# install_requires = requests; beautifulsoup4; click
# python_requires = >=3.0
# tests_require = pytest>=3
# include_package_data = 1
# packages = find:
# package_dir = =deep_translator

# [options.entry_points]
# console_scripts = deep-translator = deep_translator.__main__:deep_translator
#                 dt = deep_translator.__main__:deep_translator

# [options.packages.find]
# where = deep_translator

# bumpversion config
[bumpversion]
current_version = 1.4.4
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:deep_translator/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

# [bdist_wheel]
# universal = 1

# [flake8]
# exclude = docs

# [aliases]
# # Define setup.py command aliases here
# test = pytest

# [tool:pytest]
# collect_ignore = [setup.py]